[package]
name = "abundance-token"
description = "Soroban standard token contract, but anyone can mint tokens."
version = "0.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "0.7.0"

[dev-dependencies]
soroban-sdk = { version = "0.7.0", features = ["testutils"] }

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

